feat: Implemented new UI and Fit option changes

--- a/widget/index.html
+++ b/widget/index.html
@@ -12,6 +12,7 @@
     <link href="../../../styles/siteIcons.css" rel="stylesheet">
     <link rel="stylesheet" href="../../../styles/appStyle.css">
     <link rel="stylesheet" href="../../../scripts/owlCarousel/owlCarousel.css">
+    <link rel="stylesheet" href="./styles/styles.css">
 
     <!-- JS -->
     <script src="../../../scripts/buildfire.js"></script>
@@ -64,7 +65,7 @@
 </head>
 <body class="no-scroll">
 <div ng-controller="WidgetHomeCtrl as WidgetHome">
-    <div ng-show="WidgetHome.data.design.mode_gap" id="gapdiv" style="padding-bottom: 50%"></div>
+    <div ng-show="WidgetHome.data.design.mode_gap" id="gapdiv"></div>
     <!--
     <img ng-src="{{'../../../styles/media/holder-16x9.gif'}}"
          ng-if="WidgetHome.data.content.carouselImages.length"
