--- a/control/settings/index.html
+++ b/control/settings/index.html
@@ -6,6 +6,7 @@
   <!-- CSS -->
   <link href="../../../../styles/helper.css" rel="stylesheet">
   <link href="../../../../styles/siteIcons.css" rel="stylesheet">
+  <link rel="stylesheet" href="../styles/style.css">
 
   <!-- JS -->
   <script src="../../../../scripts/jquery/jquery-1.11.2.min.js"></script>
