fix: Applied code review feedback

--- a/control/design/index.html
+++ b/control/design/index.html
@@ -8,7 +8,7 @@
 	<link href="../../../../styles/siteIcons.css" rel="stylesheet">
 	<link href="../../../../scripts/owlCarousel/owlCarousel.css" rel="stylesheet">
 	<link rel="stylesheet" href="../../../../styles/transitionAnimation.css">
-    <link rel="stylesheet" href="../styles/style.css">
+	<link rel="stylesheet" href="../shared/assets/styles/style.css">
 
 	<!-- JS -->
 	<script src="../../../../scripts/jquery/jquery-1.11.2.min.js"></script>
