--- a/widget/index.html
+++ b/widget/index.html
@@ -12,7 +12,7 @@
     <link href="../../../styles/siteIcons.css" rel="stylesheet">
     <link rel="stylesheet" href="../../../styles/appStyle.css">
     <link rel="stylesheet" href="../../../scripts/owlCarousel/owlCarousel.css">
-    <link rel="stylesheet" href="./styles/styles.css">
+    <link rel="stylesheet" href="./shared/assets/styles/styles.css">
 
     <!-- JS -->
     <script src="../../../scripts/buildfire.js"></script>
